--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ashley's Web-Dev-HW Index</title>
+    <title> Ashley's Web-Dev-HW </title>
   </head>
 
   <body>
