--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
   <body>
     <!-- All of your body content goes between these two <body> tags. -->
-    <h1></h1>
+    <h1> Into to Web Design and Development </h1>
 
-    <h2></h2>
+    <h2> Ashley Unruh </h2>
 
     <p>
       <a href="./test/about.html">Test</a><br />
