--- a/Assignment 3/index.html
+++ b/Assignment 3/index.html
@@ -5,11 +5,34 @@
   <meta charset="utf-8">
   <meta name="description" content="A short description">
   <meta name="author" content="Your Name">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title> Cheese Grits </title>
+
 </head>
 
 <body>
+  <h1> Cheese Grits </h1>
+    <h2> Ingredients: </h2>
+    <ul>
+      <li> 2 cups whole milk </li>
+      <li> 2 cups water </li>
+      <li> 1 1/2 teaspoons kosher salt </li>
+      <li> 1 cup coarse ground cornmeal </li>
+      <li> 1/2 teaspoon freshly ground black pepper </li>
+      <li> 4 tablespoons unsalted butter </li>
+      <li> 4 ounces sharp Cheddar, shredded </li>
+    </ul>
 
-  <h1> Hello. </h1>
+    <h2> Directions: </h2>
+    <ol>
+      <li> Place the milk, water, and salt into a large, heavy-bottomed pot over medium-high heat and bring to a boil. </li>
+      <li> Once the milk mixture comes to a boil, gradually add the cornmeal while continually whisking. </li>
+      <li> Once all of the cornmeal has been incorporated, decrease the heat to low and cover. </li>
+      <li> Remove lid and whisk frequently, every 3 to 4 minutes, to prevent grits from sticking or forming lumps; make sure to get into corners of pot when whisking. </li>
+      <li> Cook for 20 to 25 minutes or until mixture is creamy. </li>
+      <li> Remove from the heat, add the pepper and butter, and whisk to combine. </li>
+      <li> Once the butter is melted, gradually whisk in the cheese a little at a time. </li>
+      <li> <i> Serve immediately. <i> </li>
 
   <p>
 
