--- a/Assignment 3/index.html
+++ b/Assignment 3/index.html
@@ -12,6 +12,7 @@
 
 <body>
   <h1> Cheese Grits </h1>
+  <q> Obviously as I'm getting older, I'm seeing changes in my body that I may not like... but I do love food, and I'm from the South. I'm not gonna lie, I eat fried chicken, I love macaroni and cheese, and I love grits. </q>
     <h2> Ingredients: </h2>
     <ul>
       <li> 2 cups whole milk </li>
@@ -32,7 +33,7 @@
       <li> Cook for 20 to 25 minutes or until mixture is creamy. </li>
       <li> Remove from the heat, add the pepper and butter, and whisk to combine. </li>
       <li> Once the butter is melted, gradually whisk in the cheese a little at a time. </li>
-      <li> <i> Serve immediately. <i> </li>
+      <li> Serve <em> immediately. </em> </li>
 
   <p>
 
