--- a/Assignment 3/index.html
+++ b/Assignment 3/index.html
@@ -18,7 +18,7 @@
       <li> 2 cups whole milk </li>
       <li> 2 cups water </li>
       <li> 1 1/2 teaspoons kosher salt </li>
-      <li> 1 cup coarse ground cornmeal </li>
+      <li> 1 cup <strong> coarse </strong> ground cornmeal </li>
       <li> 1/2 teaspoon freshly ground black pepper </li>
       <li> 4 tablespoons unsalted butter </li>
       <li> 4 ounces sharp Cheddar, shredded </li>
