--- a/Assignment 3/index.html
+++ b/Assignment 3/index.html
@@ -1,4 +1,3 @@
-< !DOCTYPE html >
 <html>
 
 <head>
@@ -35,8 +34,9 @@
       <li> Once the butter is melted, gradually whisk in the cheese a little at a time. </li>
       <li> Serve <em> immediately. </em> </li>
 
-  <p>
 
+  <p>
+    <a href="https://www.foodnetwork.com/recipes/alton-brown/cheese-grits-recipe-1915972"> Alton Brown's Cheese Grits </a>
 
 
   </p>
