--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       <a href="">Project 2</a><br />
       <a href="">Project 3</a>
     </p>
-
+<p>
+  <a href="./Assignment 3/pages/contacts.html"> Contact </a>
+</p>
   </body>
 </html>
