--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <a href="">Project 3</a>
     </p>
 <p>
-  <a href="./Assignment 3/pages/contacts.html"> Contact </a>
+  <a href="./Assignment 3/Pages/contacts.html"> Contact </a>
 </p>
   </body>
 </html>
