--- a/Assignment 4/index.html
+++ b/Assignment 4/index.html
@@ -5,7 +5,8 @@
   <meta name="description" content="A short description">
   <meta name="author" content="Your Name">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Album Cover </title>
+  <title> Assignment 4</title>
+  <style media="screen">
   body {
     background-color: powderblue;
     text-align: center;
@@ -24,15 +25,19 @@
   .contact {
     background-color: lightgray;
   }
+  </style>
 </head>
 <div id="art" class="container"> </div>
 <h2> Art </h2>
 
 <div id="audio" class="container"> </div>
 <h2> Audio </h2>
+<iframe src="https://open.spotify.com/embed/track/2zAHuViqf0egww3rtYllJn" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
 <div id="video" class="container"> </div>
 <h2> Video </h2>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/G6ZoK01M-Tk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 
 <div id="lyrics" class="container"> </div>
 <h2> Lyrics </h2>
