--- a/Assignment 4/index.html
+++ b/Assignment 4/index.html
@@ -34,10 +34,10 @@
 <h2> Audio </h2>
 <iframe src="https://open.spotify.com/embed/track/2zAHuViqf0egww3rtYllJn" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 
-<div id="video" class="container"> </div>
+<div id="video" class="container">
 <h2> Video </h2>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/G6ZoK01M-Tk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+</div>
 
 <div id="lyrics" class="container"> </div>
 <h2> Lyrics </h2>
