--- a/Assignment 4/index.html
+++ b/Assignment 4/index.html
@@ -27,22 +27,72 @@
   }
   </style>
 </head>
-<div id="art" class="container"> </div>
+<div id="art" class="container"> 
 <h2> Art </h2>
+</div>
 
-<div id="audio" class="container"> </div>
+<div id="audio" class="container">
 <h2> Audio </h2>
 <iframe src="https://open.spotify.com/embed/track/2zAHuViqf0egww3rtYllJn" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+</div>
 
 <div id="video" class="container">
 <h2> Video </h2>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/G6ZoK01M-Tk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
-<div id="lyrics" class="container"> </div>
+<div id="lyrics" class="container">
 <h2> Lyrics </h2>
+<p>
+  It ain't no big thing to wait for the bell to ring <br>
+It ain't no big thing the toll of the bell <br>
+<br>
+Aggravated spare for days <br>
+I troll down town, the red light place <br>
+Jump up bubble up, what's in store <br>
+Love is the drug and I need to score <br>
+<br>
+Showing out, showing out hit and run <br>
+Boy meets girl where the beat goes on <br>
+Stitched up tight can't shake free <br>
+Love is the drug got a hook on me <br>
+<br>
+Oh, catch that buzz <br>
+Love is the drug I'm thinking of <br>
+Oh, can't you see <br>
+Love is the drug for me <br>
+<br>
+Oh, oh <br>
+<br>
+Late that night I parked my car <br>
+Staked my place in the singles bar <br>
+Face to face, toe to toe <br>
+Heart to heart as we hit the floor <br>
+<br>
+Lumbered up limbo down <br>
+The locked embrace, stumble round <br>
+I say go, she says yes <br>
+Dim the lights you can guess the rest <br>
+<br>
+Oh, catch that buzz <br>
+Love is the drug I'm thinking of <br>
+Oh, can't you see <br>
+Love is the drug, got hookin' me <br>
+<br>
+Oh, catch that buzz <br>
+Love is the drug I'm thinking of <br>
+Oh, can't you see <br>
+Love is the drug for me <br>
+<br>
+Oh, oh, oh, oh <br>
+Oh, oh, oh, oh <br>
+Oh, oh, oh, oh <br>
+Love is, love is, love is the drug <br>
+</p>
+</div>
 
 <div id="copyright" class="container"> </div>
 <h4> Copyright </h4>
+
 
 </html>
