Let's see what happens

--- a/Assignment 4/index.html
+++ b/Assignment 4/index.html
@@ -27,7 +27,7 @@
   }
   </style>
 </head>
-<div id="art" class="container"> 
+<div id="art" class="container">
 <h2> Art </h2>
 </div>
 
@@ -91,8 +91,14 @@ Love is, love is, love is the drug <br>
 </p>
 </div>
 
-<div id="copyright" class="container"> </div>
+<div id="copyright" class="container">
 <h4> Copyright </h4>
+</div>
+
+<video poster="./media/mart-logo-poster.jpg" width="400" height="320" preload controls loop>
+  <source src="./media/mart-logo-animated.mp4" type="video/mp4"; codecs="avc1.4D401E, mp4a.40.2">
+  <source src="./media/mart-logo-animated.webm" type=" video/webm; codecs="vp8.0, vorbis">
+
 
 
 </html>
