--- a/Assignment 4/index.html
+++ b/Assignment 4/index.html
@@ -29,6 +29,7 @@
 </head>
 <div id="art" class="container">
 <h2> Art </h2>
+<img src="./images/R-=4863642-1459060344-4713.jpeg.jpg">
 </div>
 
 <div id="audio" class="container">
