--- a/Assignment 4/index.html
+++ b/Assignment 4/index.html
@@ -94,6 +94,7 @@ Love is, love is, love is the drug <br>
 
 <div id="copyright" class="container">
 <h4> Copyright </h4>
+<h5> &copy; Andrew Mc Kay / Bryan Ferry </h5>
 </div>
 
 <video poster="./media/mart-logo-poster.jpg" width="400" height="320" preload controls loop>
