--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <html>
   <head>
     <title> Ashley's Web-Dev-HW </title>
+    <style media="screen">
+    body {
+      background-color: forestgreen;
+      text-align: center;
+    }
+    </style>
   </head>
 
   <body>
