--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
   </head>
 
   <body>
-
+    <style media="screen">
+    body {
+      background-color: forestgreen;
+      text-align: center;
+    }
+    </style>
+  
     <h1> Into to Web Design and Development </h1>
 
     <h2> Ashley Unruh </h2>
