--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <body>
     <style media="screen">
     body {
-      background-color: forestgreen;
+      background-color: darkgreen;
       text-align: center;
     }
     </style>
-  
+
     <h1> Into to Web Design and Development </h1>
 
     <h2> Ashley Unruh </h2>
