--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
 <html>
   <head>
     <title> Ashley's Web-Dev-HW </title>
-    <style media="screen">
-    body {
-      background-color: forestgreen;
-      text-align: center;
-    }
-    </style>
   </head>
 
   <body>
@@ -35,7 +29,7 @@
 
     <p>
       <a href="./Project 1/index.html">Project 1</a><br />
-      <a href="">Project 2</a><br />
+      <a href="./Project 2/index.html">Project 2</a><br />
       <a href="">Project 3</a>
     </p>
 <p>
