--- a/Project 2/pages/about.html
+++ b/Project 2/pages/about.html
@@ -11,5 +11,10 @@
   </style>
 </head>
 <body>
+  <p>
+  <a href="./Project 2/pages/about.html"> About </a> <br />
+  <a href="./Project 2/pages/contact.html">Contact</a><br />
+  <a href="./Project 2/index.html"> Main </a><br />
+</p>
 </body>
 </html>
