--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <style media="screen">
     body {
-      background-color: darkgreen;
+      background-color: lightgreen;
       text-align: center;
     }
     </style>
