--- a/Project 2/pages/about.html
+++ b/Project 2/pages/about.html
@@ -10,7 +10,32 @@
 }
   </style>
 </head>
+
 <body>
+<h1> About Me </h1>
+<h3> A Brief Description... </h3>
+<p>
+  I'm just a hot mess.
+</p>
+
+<h3> Why I chose this Project... </h3>
+<p>
+  When I was in ninth grade, my english teacher had decided to show us how to
+  bind a few pieces of paper together to demonstrate how books are held together.
+  I enjoyed the novelty of being able to craft your own book. Call me old fashioned,
+  but the act of making something out of virtually nothing was deeply satisfying,
+  especially when the object you craft can be useful.
+</p>
+
+<h3> Where Can You Find More? </h3>
+<p>
+There are several great tutorials on YouTube and all across the internet.
+You can also check with your local hobby store to see if on-site lessons are possible.
+</p>
+
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/PnaD_n1Gd4E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
   <p>
   <a href="./Project 2/pages/about.html"> About </a> <br />
   <a href="./Project 2/pages/contact.html">Contact</a><br />
