--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <p>
       <a href="./Project 1/index.html">Project 1</a><br />
-      <a href="./Project 2/index.html">Project 2</a><br />
+      <a href="./Project 2/pages/about.html">Project 2</a><br />
       <a href="">Project 3</a>
     </p>
 <p>
