--- a/Project 2/pages/contact.html
+++ b/Project 2/pages/contact.html
@@ -1,1 +1,17 @@
 <!DOCTYPE html>
+<html>
+<head>
+  <title> Contact </title>
+</head>
+<body>
+  <p>
+  <a href="mailto:ashley.unruh@umconnect.umt.edu"> Email Ashley </a>
+</p>
+<address>
+  <p> 32 Campus Drive Missoula, MT 59812 </p>
+</address>
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2728.0480614643757!2d-113.98579748443112!3d46.8624265791423!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x535dcc33c3d4cbd5%3A0xd77cd4f46bdf5b89!2sMcGill+Hall%2C+32+Campus+Dr%2C+Missoula%2C+MT+59812!5e0!3m2!1sen!2sus!4v1541456875186" width="600" height="450" frameborder="0" style="border:0" allowfullscreen> </iframe>
+
+</body>
+</html>
