--- a/Project 2/pages/about.html
+++ b/Project 2/pages/about.html
@@ -6,8 +6,10 @@
   body {
     background-color: forestgreen;
     text-align: center;
+    font-family: sans-serif;
+  
   }
-}
+
   </style>
 </head>
 
