--- a/index.html
+++ b/index.html
@@ -7,12 +7,21 @@
     <style media="screen">
     body {
       background-color: lightgreen;
+      text-align: left;
+      font-family: sans-serif;
+    }
+    .container{
+      background-color: white;
       text-align: center;
+      padding: 20px;
+      font-family: cursive;
+
     }
     </style>
 
+<div id="Title"; class="container">
     <h1> Into to Web Design and Development </h1>
-
+</div>
     <h2> Ashley Unruh </h2>
 
     <p>
