--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <style media="screen">
     body {
-      background-color: lightgreen;
+      background-color: grey;
       text-align: left;
       font-family: sans-serif;
     }
@@ -15,15 +15,22 @@
       text-align: center;
       padding: 20px;
       font-family: cursive;
-
+      border-style: none;
+    }
+    .links{
+      background-color: white;
+      text-align: left;
+      font-family: sans-serif;
+      border-style: groove;
     }
     </style>
 
 <div id="Title"; class="container">
     <h1> Into to Web Design and Development </h1>
-</div>
     <h2> Ashley Unruh </h2>
+  </div>
 
+<div id="Links"; class="links">
     <p>
       <a href="./test/about.html">Test</a><br />
       <a href="./Assignment 3/index.html">Assignment 3</a><br />
@@ -44,5 +51,6 @@
 <p>
   <a href="./Assignment 3/Pages/contacts.html"> Contact </a>
 </p>
+</div>
   </body>
 </html>
