--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       background-color: white;
       text-align: center;
       padding: 20px;
-      font-family: cursive;
+      font-family: serif;
       border-style: none;
     }
     .links{
@@ -52,5 +52,5 @@
   <a href="./Assignment 3/Pages/contacts.html"> Contact </a>
 </p>
 </div>
-  </body>
+</body>=
 </html>
