--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <style media="screen">
     body {
-      background-color: grey;
+      background-color: rgb(0,99,71);
       text-align: left;
       font-family: sans-serif;
     }
@@ -29,6 +29,8 @@
     <h1> Into to Web Design and Development </h1>
     <h2> Ashley Unruh </h2>
   </div>
+  
+  <br>
 
 <div id="Links"; class="links">
     <p>
