--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     }
     .links{
       background-color: white;
+      width: 300px;
+      height: 700px;
       text-align: left;
       font-family: sans-serif;
       border-style: groove;
@@ -29,7 +31,7 @@
     <h1> Into to Web Design and Development </h1>
     <h2> Ashley Unruh </h2>
   </div>
-  
+
   <br>
 
 <div id="Links"; class="links">
