new color and style

--- a/index.html
+++ b/index.html
@@ -11,19 +11,21 @@
       font-family: sans-serif;
     }
     .container{
-      background-color: white;
+      background-color: lightgray;
       text-align: center;
       padding: 20px;
       font-family: serif;
-      border-style: none;
+      border-style: solid;
+      border-color: white;
     }
     .links{
-      background-color: white;
+      background-color: lightgray;
       width: 160px;
       height: 300px;
-      text-align: left;
+      text-align: center;
       font-family: sans-serif;
-      border-style: groove;
+      border-style: solid;
+      border-color: white;
     }
     </style>
 
