--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
       border-style: solid;
       border-color: white;
     }
+    .video{
+      background-color: lightgray;
+      width: 750px;
+      height: 500px;
+      font-family: sans-serif;
+      border-style: solid;
+      border-color: white;
+    }
     </style>
 
 <div id="Title"; class="container">
@@ -58,5 +66,9 @@
   <a href="./Assignment 3/Pages/contacts.html"> Contact </a>
 </p>
 </div>
-</body>=
+<div id="SP"; class="Video";>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/URMpqQlPjOc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+  </iframe>
+</div>
+</body>
 </html>
