--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       border-color: white;
     }
     .video{
+      align-items: right;
       background-color: lightgray;
       width: 750px;
       height: 500px;
@@ -67,7 +68,7 @@
 </p>
 </div>
 <div id="SP"; class="Video";>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/URMpqQlPjOc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+  <iframe width="711" height="400" src="https://www.youtube.com/embed/URMpqQlPjOc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
   </iframe>
 </div>
 </body>
