--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       border-color: white;
     }
     .video{
-      align-items: right;
+      align-content: center;
       background-color: lightgray;
-      width: 750px;
-      height: 500px;
+      width: 711px;
+      height: 400px;
       font-family: sans-serif;
       border-style: solid;
       border-color: white;
