--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       border-color: white;
     }
     .video{
+      float: right;
       align-content: center;
       background-color: lightgray;
       width: 711px;
@@ -68,6 +69,7 @@
 </p>
 </div>
 <div id="SP"; class="Video";>
+
   <iframe width="711" height="400" src="https://www.youtube.com/embed/URMpqQlPjOc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
   </iframe>
 </div>
