--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
       border-color: white;
     }
     .video{
-      float: right;
+      position: absolute;
+      left: auto;
+      right: 200px
       align-content: center;
       background-color: lightgray;
       width: 711px;
