--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
       border-color: white;
     }
     .video{
-      position: absolute;
-      left: auto;
-      right: 200px
+      float: right;
       align-content: center;
       background-color: lightgray;
       width: 711px;
@@ -47,8 +45,12 @@
   </div>
 
   <br>
+  <div id="SP"; class="Video";>
 
-<div id="Links"; class="links">
+    <iframe width="711" height="400" src="https://www.youtube.com/embed/URMpqQlPjOc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+    </iframe>
+  </div>
+  <div id="Links"; class="links">
     <p>
       <a href="./test/about.html">Test</a><br />
       <a href="./Assignment 3/index.html">Assignment 3</a><br />
@@ -69,11 +71,6 @@
 <p>
   <a href="./Assignment 3/Pages/contacts.html"> Contact </a>
 </p>
-</div>
-<div id="SP"; class="Video";>
-
-  <iframe width="711" height="400" src="https://www.youtube.com/embed/URMpqQlPjOc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-  </iframe>
 </div>
 </body>
 </html>
