--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     }
     .video{
       float: right;
+      padding-right: 199px;
       align-content: center;
       background-color: lightgray;
       width: 711px;
