--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     }
     .video{
       float: right;
-      padding-right: 199px;
+      right: 881px;
       align-content: center;
       background-color: lightgray;
       width: 711px;
