--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       border-color: white;
     }
     .video{
-      float: left;
+      float: center;
       right: 199px;
       align-content: center;
       background-color: lightgray;
