--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       border-color: white;
     }
     .video{
-      float: center;
+      float: right;
       align-content: center;
       background-color: lightgray;
       width: 711px;
