--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       border-color: white;
     }
     .video{
+      margin-right: 881px;
       float: right;
       align-content: center;
       background-color: lightgray;
