--- a/Assignment 5/index.html
+++ b/Assignment 5/index.html
@@ -11,7 +11,7 @@
   <body>
 
     <div class="background">
-      <img src="./images/1960s-03.png">
+      <img src="./Assignmet 5/images/1960s-03.png">
 
     </div>
   </body>
