--- a/Assignment 5/index.html
+++ b/Assignment 5/index.html
@@ -2,16 +2,16 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="A short description">
-  <meta name="author" content="Your Name">
+  <meta name="description" content="We're playing with color today.">
+  <meta name="author" content="Ashley">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Assignment 5</title>
+  <title> Assignment 5 </title>
   <link rel="stylesheet" type= "text/css" href="./Assignment 5/css/style.css">
   </head>
   <body>
 
     <div class="background" id="panel">
-      <img src=". /Assignment 5/images/1960s-03.png" class="alignleft">
+      <img src=". /Assignment 5/images/1960s-03.png" class="alignleft" />
     </div>
   </body>
   </html>
