--- a/Assignment 5/index.html
+++ b/Assignment 5/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
 
-    <div class="background" id="panel">
+    <div class="background" id="panel"/>
       <img src="./Assignment 5/images/1960s-03.png" class="alignleft" />
     </div>
   </body>
