--- a/Assignment 5/index.html
+++ b/Assignment 5/index.html
@@ -11,7 +11,7 @@
   <body>
 
     <div class="background" id="panel"/>
-      <img src="./Assignment 5/images/1960s-03.png" class="alignleft" />
+      <img src="./images/1960s-03.png" class="alignleft" />
     </div>
   </body>
   </html>
