--- a/Assignment 5/index.html
+++ b/Assignment 5/index.html
@@ -10,8 +10,11 @@
   </head>
   <body>
 
-    <div class="background" id="panel"/>
+    <div class="background" id="left"/>
       <img src="./images/1960s-03.png" class="alignleft" />
+    </div>
+    <div class="background" id="right"/>
+      <img src="./images/1960s-03.png" class="alignright" />
     </div>
   </body>
   </html>
