--- a/Assignment 5/index.html
+++ b/Assignment 5/index.html
@@ -6,7 +6,7 @@
   <meta name="author" content="Ashley">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Assignment 5 </title>
-  <link rel="stylesheet" type= "text/css" href="./Assignment 5/css/style.css">
+  <link rel="stylesheet" type= "text/css" href="./css/style.css">
   </head>
   <body>
 
