--- a/Assignment 5/index.html
+++ b/Assignment 5/index.html
@@ -13,6 +13,10 @@
     <div class="background" id="left"/>
       <img src="./images/1960s-03.png" class="alignleft" />
     </div>
+
+<div class="aligncenter" id="center" />
+</div>
+
     <div class="background" id="right"/>
       <img src="./images/1960s-03.png" class="alignright" />
     </div>
