doing some experiments

--- a/Assignment 5/index.html
+++ b/Assignment 5/index.html
@@ -15,6 +15,7 @@
     </div>
 
 <div class="aligncenter" id="center" />
+<p> Colors of the 60's </p>
 </div>
 
     <div class="background" id="right"/>
