--- a/Project 2/pages/about.html
+++ b/Project 2/pages/about.html
@@ -4,10 +4,10 @@
   <title> About </title>
   <style media="screen">
   body {
-    background-color: forestgreen;
+    background-color: inherit;
     text-align: center;
     font-family: sans-serif;
-  
+
   }
 
   </style>
