--- a/test/about.html
+++ b/test/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <h1> Hello, World! </h1>
 
 <h2> This is my first HTML page. </h2>
@@ -23,4 +23,5 @@
 <hr />
 
 <p> My Workstation </p>
-<img src="./images/screenshot.png"/>
+<img src="./images/workstation.png"/>
+</html>
