--- a/Assignment 5/index.html
+++ b/Assignment 5/index.html
@@ -9,11 +9,12 @@
   <link rel="stylesheet" type= "text/css" href="./css/style.css">
   </head>
   <body>
+    <div class="foreground" id="center">
+    </div>
 
     <div class="background" id="left"/>
       <img src="./images/1960s-03.png" class="alignleft" />
     </div>
-
 
     <div class="background" id="right"/>
       <img src="./images/1960s-03.png" class="alignright" />
