--- a/Assignment 5/index.html
+++ b/Assignment 5/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div class="foreground" id="center">
+      <p> Hello </p>
     </div>
 
     <div class="background" id="left"/>
