--- a/Assignment 6/index.html
+++ b/Assignment 6/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <h3> Spade and Archer <h3>
+    <h3> Spade and Archer </h3>
 <hr/>
 <p>
 Samuel Spade's jaw was long and bony, his chin a jutting v under the more flexible v of his mouth.
