--- a/Assignment 6/index.html
+++ b/Assignment 6/index.html
@@ -9,7 +9,9 @@
   <link rel="stylesheet" type= "text/css" href="./css/fonts.css">
 </head>
 <body>
-
+<style media="screen">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+</style>
     <h3> Spade and Archer </h3>
 <hr/>
 <p>
