--- a/Assignment 6/index.html
+++ b/Assignment 6/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
 <style media="screen">
-  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  @font-face {
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  }
 </style>
     <h3> Spade and Archer </h3>
 <hr/>
