--- a/Assignment 6/index.html
+++ b/Assignment 6/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type= "text/css" href="./css/fonts.css">
 </head>
 <body>
+  <div class="text" id="story">
     <h3> Spade and Archer </h3>
 <hr/>
 <p>
@@ -51,3 +52,4 @@ Miss Wonderly murmured, "Thank you," softly as before and sat down on the edge o
 Spade sank into his swivel-chair, made a quarter-turn to face her, smiled politely. He smiled without separating his lips. <br>
 All the v's in his face grew longer.
 </p>
+</div>
