--- a/Assignment 6/index.html
+++ b/Assignment 6/index.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" type= "text/css" href="./css/fonts.css">
 </head>
 <body>
-  <div class="text" id="story">
-    <h3> Spade and Archer </h3>
+  <div id="story">
+        <h3> Spade and Archer </h3>
 <hr/>
 <p>
 Samuel Spade's jaw was long and bony, his chin a jutting v under the more flexible v of his mouth.
@@ -53,3 +53,5 @@ Spade sank into his swivel-chair, made a quarter-turn to face her, smiled polite
 All the v's in his face grew longer.
 </p>
 </div>
+</body>
+</html>
