--- a/Assignment 6/index.html
+++ b/Assignment 6/index.html
@@ -7,7 +7,7 @@
   <title> Assignment 6 </title>
   <link rel="stylesheet" type= "text/css" href="./css/style.css">
   <link rel="stylesheet" type= "text/css" href="./css/fonts.css">
-  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/cooper-hewitt" type="text/css"/>
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/comphand" type="text/css"/>
 </head>
 <body>
   <div id="story">
