--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </style>
 
 <div id="Title"; class="container">
-    <h1> Into to Web Design and Development </h1>
+    <h1> Intro to Web Design and Development </h1>
     <h2> Ashley Unruh </h2>
   </div>
 
