--- a/Assignment 6/index.html
+++ b/Assignment 6/index.html
@@ -14,42 +14,49 @@
         <h3> Spade and Archer </h3>
 <hr/>
 <p>
-Samuel Spade's jaw was long and bony, his chin a jutting v under the more flexible v of his mouth.
-His nostrils curved back to make another, smaller, v. His yellow-grey eyes were horizontal.
-The v motif was picked up again by thickish brows rising outward from twin creases above a hooked nose,
-and his pale brown hair grew down--from high flat temples--in a point on his forehead.
-He looked rather pleasantly like a blond satan. <br>
-
+Samuel Spade's jaw was long and bony, his chin a jutting
+v under the more flexible v of his mouth. His nostrils curved
+back to make another, smaller, v. His yellow-grey eyes were
+horizontal. The v motif was picked up again by thickish brows
+rising outward from twin creases above a hooked nose,
+and his pale brown hair grew down--from high flat temples--in
+a point on his forehead. He looked rather pleasantly like a blond satan. <br>
+<br>
 He said to Effie Ferine: "Yes, sweetheart?"<br>
-
-She was a lanky sunburned girl whose tan dress of thin woolen stuff clung to her with an effect of dampness.
-Her eyes were brown and playful in a shiny boyish face. She finished shutting the door behind her,
-leaned against it, and said: "There's a girl wants to see you. Her name's Wonderly." <br>
-
+<br>
+She was a lanky sunburned girl whose tan dress of thin woolen
+stuff clung to her with an effect of dampness. Her eyes were
+brown and playful in a shiny boyish face. She finished shutting
+the door behind her, leaned against it, and said: "There's a girl
+wants to see you. Her name's Wonderly." <br>
+<br>
 "A customer?" <br>
-
+<br>
 "I guess so. You'll want to see her anyway: she's a knockout." <br>
-
+<br>
 "Shoo her in, darling," said Spade. "Shoo her in." <br>
-
-Effie Ferine opened the door again, following it back into the outer office,
-standing with a hand on the knob while saying: "Will you come in, Miss Wonderly?" <br>
-
-A voice said, "Thank you," so softly that only the purest articulation made the words intelligible,
-and a young woman came through the doorway. She advanced slowly, with tentative steps, looking at Spade
-with cobalt-blue eyes that were both shy and probing. <br>
-
+<br>
+Effie Ferine opened the door again, following it back into
+the outer office, standing with a hand on the knob while saying:
+"Will you come in, Miss Wonderly?" <br>
+<br>
+A voice said, "Thank you," so softly that only the purest
+articulation made the words intelligible, and a young woman
+came through the doorway. She advanced slowly, with tentative
+steps, looking at Spade with cobalt-blue eyes that were both
+shy and probing. <br>
+<br>
 She was tall and pliantly slender, without angularity anywhere. Her body was erect and high-breasted,
 her legs long, her hands and feet narrow. She wore two shades of blue that had been selected because of her eyes.
 The hair curling from under her blue hat was darkly red, her full lips more brightly red. White teeth glistened
 in the crescent her timid smile made. <br>
-
+<br>
 Spade rose bowing and indicating with a thick-fingered hand the oaken armchair beside his desk.
 He was quite six feet tall. The steep rounded slope of his shoulders made his body seem almost conical
 --no broader than it was thick--and kept his freshly pressed grey coat from fitting very well. <br>
-
+<br>
 Miss Wonderly murmured, "Thank you," softly as before and sat down on the edge of the chair's wooden seat. <br>
-
+<br>
 Spade sank into his swivel-chair, made a quarter-turn to face her, smiled politely. He smiled without separating his lips. <br>
 All the v's in his face grew longer.
 </p>
