--- a/Assignment 6/index.html
+++ b/Assignment 6/index.html
@@ -7,27 +7,33 @@
   <title> Assignment 6 </title>
   <link rel="stylesheet" type= "text/css" href="./css/style.css">
   <link rel="stylesheet" type= "text/css" href="./css/fonts.css">
-  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/comphand" type="text/css"/>
+
 </head>
 <body>
+
+  <div id="title">
+    <h1> The Maltese Falcon </h1>
+  </div>
+
+
   <div id="story">
+    <div id="text">
         <h3> Spade and Archer </h3>
 <hr/>
 <p>
-Samuel Spade's jaw was long and bony, his chin a jutting <br>
-v under the more flexible v of his mouth. His nostrils curved <br>
-back to make another, smaller, v. His yellow-grey eyes were <br>
-horizontal. The v motif was picked up again by thickish brows <br>
-rising outward from twin creases above a hooked nose, <br>
-and his pale brown hair grew down--from high flat temples--in <br>
-a point on his forehead. He looked rather pleasantly like a blond satan. <br>
+Samuel Spade's jaw was long and bony, his chin a jutting
+v under the more flexible v of his mouth. His nostrils curved
+back to make another, smaller, v. His yellow-grey eyes were
+horizontal. The v motif was picked up again by thickish brows
+rising outward from twin creases above a hooked nose,
+and his pale brown hair grew down--from high flat temples--in a point on his forehead. He looked rather pleasantly like a blond satan. <br>
 <br>
 He said to Effie Ferine: "Yes, sweetheart?"<br>
 <br>
-She was a lanky sunburned girl whose tan dress of thin woolen <br>
-stuff clung to her with an effect of dampness. Her eyes were <br>
-brown and playful in a shiny boyish face. She finished shutting <br>
-the door behind her, leaned against it, and said: "There's a girl <br>
+She was a lanky sunburned girl whose tan dress of thin woolen
+stuff clung to her with an effect of dampness. Her eyes were
+brown and playful in a shiny boyish face. She finished shutting
+the door behind her, leaned against it, and said: "There's a girl
 wants to see you. Her name's Wonderly." <br>
 <br>
 "A customer?" <br>
@@ -36,37 +42,45 @@ wants to see you. Her name's Wonderly." <br>
 <br>
 "Shoo her in, darling," said Spade. "Shoo her in." <br>
 <br>
-Effie Ferine opened the door again, following it back into <br>
-the outer office, standing with a hand on the knob while saying: <br>
+Effie Ferine opened the door again, following it back into
+the outer office, standing with a hand on the knob while saying:
 "Will you come in, Miss Wonderly?" <br>
 <br>
-A voice said, "Thank you," so softly that only the purest <br>
-articulation made the words intelligible, and a young woman <br>
-came through the doorway. She advanced slowly, with tentative <br>
-steps, looking at Spade with cobalt-blue eyes that were both <br>
+A voice said, "Thank you," so softly that only the purest
+articulation made the words intelligible, and a young woman
+came through the doorway. She advanced slowly, with tentative
+steps, looking at Spade with cobalt-blue eyes that were both
 shy and probing. <br>
 <br>
-She was tall and pliantly slender, without angularity anywhere. <br>
-Her body was erect and high-breasted, her legs long, her hands  <br>
-and feet narrow. She wore two shades of blue that had been selected <br>
-because of her eyes. The hair curling from under her blue hat was <br>
-darkly red, her full lips more brightly red. White teeth glistened <br>
+She was tall and pliantly slender, without angularity anywhere.
+Her body was erect and high-breasted, her legs long, her hands
+and feet narrow. She wore two shades of blue that had been selected
+because of her eyes. The hair curling from under her blue hat was
+darkly red, her full lips more brightly red. White teeth glistened
 in the crescent her timid smile made. <br>
 <br>
-Spade rose bowing and indicating with a thick-fingered hand the oaken <br>
-armchair beside his desk. He was quite six feet tall. The steep rounded <br>
-slope of his shoulders made his body seem almost conical --no broader <br>
-than it was thick--and kept his freshly pressed grey coat from fitting <br>
+Spade rose bowing and indicating with a thick-fingered hand the oaken
+armchair beside his desk. He was quite six feet tall. The steep rounded
+slope of his shoulders made his body seem almost conical --no broader
+than it was thick--and kept his freshly pressed grey coat from fitting
 very well. <br>
 <br>
-Miss Wonderly murmured, "Thank you," softly as before and sat down on <br>
+Miss Wonderly murmured, "Thank you," softly as before and sat down on
 the edge of the chair's wooden seat. <br>
 <br>
-Spade sank into his swivel-chair, made a quarter-turn to face her, <br>
+Spade sank into his swivel-chair, made a quarter-turn to face her,
 smiled politely. He smiled without separating his lips. <br>
 <br>
 All the v's in his face grew longer.
 </p>
+
+<hr>
+
+
+<button> Read More </button>
+
 </div>
+</div>
+
 </body>
 </html>
