So much has changed...

--- a/Assignment 6/index.html
+++ b/Assignment 6/index.html
@@ -75,9 +75,11 @@ All the v's in his face grew longer.
 </p>
 
 <hr>
+<a href="https://gutenberg.ca/ebooks/hammettd-maltesefalcon/hammettd-maltesefalcon-00-h.html#chapter01'">
+<button class="button" > Read More </button>
+</a>
 
 
-<button> Read More </button>
 
 </div>
 </div>
