--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -4,8 +4,8 @@
 </head>
 <body>
   <p>
-    <a href="./Project 2/pages/about.html"> About</a><br />
-    <a href="./Project 2/pages/contact.html"> Contact</a><br />
+    <a href="../Project 2/pages/about.html"> About</a><br />
+    <a href="../Project 2/pages/contact.html"> Contact</a><br />
   </p>
 </body>
 </html>
