--- a/Assignment 5/index.html
+++ b/Assignment 5/index.html
@@ -10,8 +10,11 @@
   </head>
   <body>
     <div class="foreground" id="center">
-      <p>  </p>
+      <h2> The Swingin' Sixties </h2>
+      <div id="video">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/AWdwtDJ8VLk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
+  </div>
 
   </body>
   </html>
