--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -1,8 +1,83 @@
 <html>
 <head>
   <title> Project 2 </title>
+  <style media="screen">
+  body {
+    background-color: purple;
+    text-align: left;
+  }
+  #list{
+    text-align: left;
+  }
+  div{
+    background-color: lightgray;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 40px;
+    padding-right: 40px;
+    width: 700px;
+  }
+  </style>
 </head>
 <body>
+  <div id="description">
+    <h1> How to Bind a Book </h1>
+    <p> <q>Bookbinding is an artistic craft of great antiquity, and at the same time, a highly mechanized industry. The division between craft and industry is not so wide as might at first be imagined. It is interesting to observe that the main problems faced by the mass-production bookbinder are the same as those that confronted the medieval craftsman or the modern hand binder. The first problem is still how to hold together the pages of a book; secondly is how to cover and protect the gathering of pages once they are held together; and thirdly, how to label and decorate the protective cover. </q>
+    </p>
+  </div>
+  <div id="list">
+    <ul>
+      <li> Letter or A4 Sized Paper </li>
+      <li> PVA Glue </li>
+      <li> Bookbinding Needle </li>
+      <li> Linen Thread </li>
+      <li> Bookbinding Awl </li>
+      <li> Scalpel </li>
+      <li> Paintbrush </li>
+    </ul>
+  </div>
+  <div id="photo1">
+    <img src="./images/picture1.jpg" alt="hole">
+  </div>
+  <div id="step1">
+    <p> Step One: <br>
+      Tap the top of the pages against a flat surface to ensure they are flush,
+      lay them flat and pierce through the dots carefully, using a bookbinding awl.
+       Keep the awl as straight as possible when piercing through the pages to
+       make it easier to sew.
+    </p>
+  </div>
+  <div id="photo2">
+    <img src="./images/picture2.jpg" alt="thread">
+  </div>
+  <div id="step2">
+    <p> Step Two: <br>
+      Starting at the middle hole, push the needle up through the back of your pages, leaving a 10cm loose thread remaining. Go around the spine and back up through the same hole, holding the loose thread to keep the pages tight. <br>
+<br>
+Go to the next hole in either direction, thread your needle down, around and back up through, then along to the next hole. Repeat this process to the end, then weave the thread back along the length to the centre, ensuring it runs along the length of the spine on both sides. <br>
+<br>
+At the middle hole, repeat this process along the second half of the book. End back at the middle hole and tie off using the loose thread. Cut off any remaining thread about 1cm from the knot.
+    </p>
+  </div>
+  <div id="photo3">
+    <img src="./images/picture3.jpg" alt="glue">
+  </div>
+  <div id="step3">
+    <p> Step Three: <br>
+      Place your book between two clean boards - or a couple of heavy books - to press your pages flat, making sure the spine sticks out a little. With a paintbrush, paste the spine with a fine layer of PVA glue (thinned with a dash of water) and leave it for 20 minutes to dry. <br>
+      <br>
+Make sure the glue doesn't collect around the edge of the pages, as this may stop them opening properly. When the spine is dry, remove it from your DIY bookpress and use the scalpel to trim off the excess paper beyond the crop marks.
+    </p>
+  </div>
+  <div id="photo4">
+    <img src="./images/picture4.jpg" alt="cover">
+  </div>
+  <div id="step4">
+    <p> Step Four: <br>
+      Place your book against this fold to double-check the measurement is alright, then score and fold over the second. Push the spine of your book into the spine of the cover and mark out where your first gatefold should be. Score and fold with a bone folder, turn your book over and then repeat this for the second gatefold.
+    </p>
+  </div>
+
   <p>
     <a href="../Project 2/pages/about.html"> About</a><br />
     <a href="../Project 2/pages/contact.html"> Contact</a><br />
