--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <p>
       <a href="./Project 1/index.html">Project 1</a><br />
       <a href="./Project 2/index.html">Project 2</a><br />
-      <a href="">Project 3</a>
+      <a href="./Project 3/index.html">Project 3</a>
     </p>
 <p>
   <a href="./Assignment 3/Pages/contacts.html"> Contact </a>
